add test and passing code to calculate regular vs. express costs

--- a/views/parcel.erb
+++ b/views/parcel.erb
@@ -6,5 +6,7 @@
 <li><%= @parcel.distance %></li>
 <li><%= @parcel.cost %></li>
 
+var ship_fast = $("input:radio[name=flavor]:checked").val();
+
 <p><a href="/parcels/<%= @parcel.id %>/edit">Edit parcel</a></p>
 <a href="/parcels">Return to parcels list</a>
