add css and README

--- a/views/parcel.erb
+++ b/views/parcel.erb
@@ -6,6 +6,7 @@
 <li>Distance: <%= @parcel.distance %></li>
 <li>Regular shipping cost: <%= @parcel.regular_cost %></li>
 <li>Express shipping cost: <%= @parcel.express_cost %></li>
+<li>Gift wrapping would be an additional cost of: <%= @parcel.gift_wrap %></li>
 
 <p><a href="/parcels/<%= @parcel.id %>/edit">Edit parcel</a></p>
 <a href="/parcels">Return to parcels list</a>
